Display count of embeddings

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,4 +28,7 @@
 #       enabled: "ON"
 
 en:
-  hello: "Hello world"
+  embeddings:
+    zero: 'no embeddings'
+    one: 'one embedding'
+    other: '%{count} embeddings'
